[package]
name = "cold"
version = "0.0.2"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"
description = "Rust runtime for p2p networking"
license = "MIT"
repository = "https://github.com/vlad9486/cold"

[dependencies]
log = { version = "0.4" }
futures = { version = "0.3" }
mio = { version = "0.7", features = ["os-poll", "os-ext"] }
crossbeam = { version = "0.8" }
pin-project-lite = { version = "0.2" }

[dev-dependencies]
simple-logging = { version = "2.0" }
